--- a/common/common.htmlarea/src/main/resources/web/htmlarea/index.html
+++ b/common/common.htmlarea/src/main/resources/web/htmlarea/index.html
@@ -1,9 +1,13 @@
 
 <link rel="stylesheet" href="../kindeditor/themes/default/default.css" />
 <link rel="stylesheet" href="../kindeditor/plugins/code/prettify.css" />
+<link rel="stylesheet" href="HtmlArea.css" />
+
 <script charset="utf-8" src="../kindeditor/kindeditor-all.js"></script>
 <script charset="utf-8" src="../kindeditor/lang/zh-CN.js"></script>
 <script charset="utf-8" src="../kindeditor/plugins/code/prettify.js"></script>
+	
+<script src="../resources/utils/formatDate.js"></script>
 
 <style type="text/css">
 	.buttonEnabled{}
@@ -32,21 +36,21 @@
 						</div>
 
 						<div class="form-group my-form-group" style="width: 48%;">
-							<label for="formLanValue" style="width: 18%; text-align: right;">内容:</label>
+							<label for="searchHtmlAreaContent" style="width: 18%; text-align: right;">内容:</label>
 							<input type="text" class="form-control" style="width: 78%;"
-								placeholder="Html Area Content" name="content">
+								placeholder="Html Area Content" name="searchHtmlAreaContent">
 						</div>
 					</div>
 
 					<div class="form-group my-form-row">
 						<div class="form-group my-form-group" style="width: 48%;">
-							<label for="formRemarks" style="">映射路径:</label> <input type="text"
+							<label for="mappingUrl" style="">映射路径:</label> <input type="text"
 								class="form-control" style="width: 78%;" placeholder="Mapper URL"
 								name="mappingUrl">
 						</div>
 
-						<div class="form-group my-form-group" style="width: 48%;">
-							<label for="formLanType" style="width: 18%; text-align: right;">状态:</label>
+						<div class="form-group my-form-group" style="width: 48%;" >
+							<label for="programFilterEnable" style="width: 18%; text-align: right;">状态:</label>
 							<select class="form-control" style="width: 78%;" name="programFilterEnable">
 								<option value="0">停用</option>
 								<option value="1">启用</option>
@@ -77,24 +81,24 @@
 					<div class="form-group my-form-row" style="height: 38px;">
 						<label for="startdate" style="width: 108px; text-align: right;">创建时间:</label>
 						<input type="text" style="width: 38%;"
-							class="easyui-datebox form-control" id="startdate"
-							name="startdate"
-							data-options="prompt:'请选择开始日期',editable:false,required:'true',onSelect:onSelect">
+							class="easyui-datebox form-control" id="createFromDate"
+							name="createFromDate"
+							data-options="formatter:myformatter2,parser:myparser,prompt:'请选择开始日期',editable:false,required:'true',onSelect:onSelect">
 						<span style="width: 58px; text-align: center; margin: 0 28px;">&nbsp;
 							<i class="fa fa-chevron-right" aria-hidden="true"></i> <span
 							class="sr-only">TO</span>
 						</span> <input type="text" style="width: 38%; margin-left: 58px;"
-							class="easyui-datebox form-control" id="enddate" name="enddate"
-							data-options="prompt:'请选择结束日期',editable:false,required:'true',validType:'equaldDate[\'#startdate\']'">
+							class="easyui-datebox form-control" id="createdToDate" name="createdToDate"
+							data-options="formatter:myformatter2,parser:myparser,prompt:'请选择结束日期',editable:false,required:'true',validType:'equaldDate[\'#createFromDate\']'">
 					</div>
 
 					<div
 						class="form-group my-form-group form-search-btn-group my-form-row"
 						style="text-align: center;">
-						<button type="submit" class="btn btn-success">
+						<button type="reset" class="btn btn-success" id="htmlarea_search_reset">
 							<i class="fa fa-undo"></i> Reset
 						</button>
-						<button type="submit" class="btn btn-success">
+						<button type="submit" class="btn btn-success" id="htmlarea_search_search">
 							<i class="fa fa-search"></i> Search
 						</button>
 					</div>
@@ -107,10 +111,7 @@
 					class="btn btn-primary actionbtn"
 					 id="htmlarea_create"><i class="fa fa-plus"></i>
 					Add Item</a> 
-				<a href="javascript:void(0)" id="htmlArea_modal_submit"
-					class="btn btn-primary actionbtn l-btn-disabled"
-					><i
-					class="fa fa-save fa-trash-o fa-lg"></i> Save</a> 
+				
 				<a href="javascript:void(0)" id="htmlArea_remove"
 					class="btn btn-primary optionbtn l-btn-disabled"
 					><i
@@ -192,32 +193,29 @@
 
 <script type="text/x-handlebars-template-partial"
 	id="htmlArea_table_tr_template">
-	<tr data-id="{{htmlAreaId}}" data-name="{{name}}">
+	<tr data-id="{{htmlAreaId}}" data-name="{{mappingUrl}}">
         <td>
 		<label class="checkbox-inline">
         	<input type="checkbox" id="htmlAreaId" name="htmlAreaId" value="{{htmlAreaId}}" onclick="validateRemoveBtn()">
     	</label>
 		</td>
 		<td>{{name}}</td>
-		<td ><div class="content_ov">{{mappingUrl}}</div></td>
-		<td ><div class="content_ov">{{content}}<i
-						class="fa fa-info"></i></div></td>
+		<td ><div class="content_ov" alt="{{mappingUrl}}">{{mappingUrl}}</div></td>
+		<td ><div class="content_ov" alt="{{content}}">{{content}}</div></td>
 		<td>{{title}}</td>
 		<td>{{programFilterEnable}}</td>
-		<td>{{createFromDate}}</td>
-		<td>{{createToDate}}</td>
-		<td ><div class="content_ov">{{description}}</div></td>
+		<td>{{validFromDate}}</td>
+		<td>{{validToDate}}</td>
+		<td ><div class="content_ov" alt="{{description}}">{{description}}</div></td>
 		<td>{{createdUser}}</td>
 		<td>{{createdDate}}</td>
 		<td>{{updateLastUser}}</td>
 		<td>{{updateLastDate}}</td>
         <td>
             <button class="btn btn-xs btn-primary htmlarea_edit" title="Edit"><i class="fa fa-fw fa-edit"></i></button>
-            <button class="btn btn-xs btn-default htmlarea_delete" title="Delete"><i class="fa fa-fw fa-trash-o"></i></button>
         </td>
     </tr>
 </script>
-
 
 <div class="modal" id="htmlarea_modal">
 	<div class="modal-dialog">
@@ -228,7 +226,7 @@
 			</div>
 			<div class="modal-body">
 				<iframe id="form_iframe" style="display:none;"></iframe>
-			<form id="editor_html_area" method="post" target="form_iframe">
+			<form id="search_html_area" method="post" target="form_iframe">
 				<input type="hidden" id="htmlAreaId" value="{{htmlAreaId}}">
 				<div class="form-group">        
 					<div class="form-group" style="width:46%;margin:3px;float:left;">
@@ -242,21 +240,17 @@
 				</div>
 
 				<div class="form-group">
-					<label for="mappingUrl">映射地址:</label>
+					<label for="mappingUrl">映射地址<span class="required">*</span>:</label>
 					<input type="text" value="{{mappingUrl}}" class="form-control" id="mappingUrl">
 				</div>
 				<fieldset style="border:1px;border-color: #990000;padding:6px;">
 				<legend style="font-size:12px;font-weight:bold;">文本内容</legend>
-				<textarea name="htmlAreaContent" cols="100" rows="8" style="width:98%;height:200px;visibility:hidden;">
-				{{content}}
-				</textarea>
+				<textarea name="textareaContent" cols="100" rows="8" style="width:98%;height:200px;visibility:hidden;">{{content}}</textarea>
 			</fieldset>
 				
 			<fieldset style="border:1px;border-color: #990000;padding:6px;">
 				<legend style="font-size:12px;font-weight:bold;">补充说明</legend>
-				<textarea name="description" cols="100" rows="6" style="width:98%;height:100px;">
-				{{description}}
-				</textarea>
+				<textarea name="description" cols="100" rows="6" style="width:98%;height:100px;">{{description}}</textarea>
 			</fieldset>
 
 				<div class="form-group">
@@ -277,16 +271,16 @@
 
 				<div class="form-group" >
 					<div class="form-group" style="width:46%;margin:3px;float:left;clear:both;">
-						<label for="createFromDate">有效开始时间:</label>
-						<input type="text" value="{{createFromDate}}" class="easyui-datebox form-control"
-								 id="createFromDate" name="createFromDate"
-								data-options="prompt:'请选择开始日期',editable:false,onSelect:onSelect">
+						<label for="validFromDate">有效开始时间:</label>
+						<input type="text" value="{{validFromDate}}" class="easyui-datebox form-control"
+								 id="validFromDate" name="validFromDate"
+								data-options="prompt:'请选择开始日期',formatter:myformatter2,parser:myparser,editable:false,onSelect:onSelect">
 					</div>
 					<div class="form-group" style="width:46%;margin:3px;float:left;">
 						<label for="createToDate">有效结束时间:</label>
-						<input type="text" value="{{createToDate}}" class="easyui-datebox form-control"
-						 id="createToDate"  name="createToDate"
-							data-options="prompt:'请选择结束日期',editable:false,validType:'equaldDate[\'#createFromDate\']'">
+						<input type="text" value="{{validToDate}}" class="easyui-datebox form-control"
+						 id="validToDate"  name="validToDate"
+							data-options="prompt:'请选择结束日期',formatter:myformatter2,parser:myparser,editable:false,validType:'equaldDate[\'#validFromDate\']'">
 					</div>
 				</div>
 			</form>
@@ -300,271 +294,10 @@
 		</div>
 	</div>
 </div>
-	
-<script src="../resources/utils/formatDate.js"></script>
+
 <script src="../resources/js/global.js"></script>
 <script src="js/HtmlAreaView.js"></script>
 <script src="js/HtmlAreaService.js"></script>
+<script src="js/HtmlAreaMgr.js"></script>
 
-<script>
-	
-	$.extend($.fn.validatebox.defaults.rules, {
-		equaldDate : {
-			validator : function(value, param) {
-				var d1 = $(param[0]).datetimebox('getValue'); //获取开始时间
-				return value >= d1; //有效范围为大于开始时间的日期
-			},
-			message : '结束日期不能早于开始日期!'
-		}
-	})
-	var validateRemoveBtn = function(){
-		var checkNum = $('input:checkbox[name=htmlAreaId]:checked').length;
-		if(checkNum>0){
-			$(".optionbtn").removeClass("l-btn-disabled");
-		}else{
-			$(".optionbtn").addClass("l-btn-disabled");
-		}
-	}
-	
-	/**取编辑form表单的值*/
-	getEditorFormValue=function(){
-		var htmlObj = {};
-		htmlObj.name = $('#htmlarea_modal #name').val();
-		htmlObj.title = $('#htmlarea_modal #title').val();
-		htmlObj.mappingUrl = $('#htmlarea_modal #mappingUrl').val();
-		htmlObj.content = $('textarea[name="htmlAreaContent"]').val();
-		htmlObj.description = $('#htmlarea_modal textarea[name="description"]').val();
-		htmlObj.programFilterEnable = $('#htmlarea_modal input[name="programFilterEnable"]').val();
-		htmlObj.category = $('#htmlarea_modal input[name="category"]').val();
-		htmlObj.createToDate = $('#htmlarea_modal #createToDate').val();
-		htmlObj.createFromDate = $('#htmlarea_modal #createFromDate').val();
-		htmlObj.htmlAreaId = $('#htmlarea_modal #htmlAreaId').val();
-		return htmlObj;	
-	}
-	
-	/**设置编辑form表单的值*/
-	setEditorFormValue=function(htmlObj){
-		
-		$('#htmlarea_modal #name').val(htmlObj.name);
-		$('textarea[name="htmlAreaContent"]').val(htmlObj.content);
-		$('#htmlarea_modal #title').val(htmlObj.title);
-		$('#htmlarea_modal #mappingUrl').val(htmlObj.mappingUrl);
-		$('#htmlarea_modal textarea[name="description"]').val(htmlObj.description);
-		$('#htmlarea_modal input[name="programFilterEnable"]').val(htmlObj.programFilterEnable);
-		$('#htmlarea_modal input[name="category"]').val(htmlObj.category);
-		$('#htmlarea_modal #createToDate').val(htmlObj.createToDate);
-		$('#htmlarea_modal #createFromDate').val(htmlObj.createFromDate);
-		$('#htmlarea_modal #htmlAreaId').val(htmlObj.htmlAreaId);
-	}
-	/**
-	渲染编辑窗口和填充表单
-	*/
-	renderHtmlAreaModal=function(title,htmlObj){
-		console.info(htmlObj.htmlAreaId);
-		setEditorFormValue(htmlObj);
-		KindEditor.create('textarea[name="htmlAreaContent"]', {
-			resizeType : 1,
-			afterCreate : function() {
-				this.sync();
-			},
-			//下面这行代码就是关键的所在，当失去焦点时执行 this.sync();  
-			afterBlur : function() {
-				this.sync();
-			}
-		});
-		$('#htmlarea_modal .modal-title').text(title);
-		$('#htmlarea_modal').modal('show');
-	}
-	
-	$(function() {
-		
-		$('#HtmlArea_tt').tabs({
-			plain : true
-		})
-		
-		// 显示所有产品
-		//$('body').hide(); // 隐藏界面
-		HtmlAreaService.findHtmlAreas(function() {
-			$('body').show(); // 显示界面
-		});
-		
-		// 点击 Create 按钮，弹出创建产品对话框
-		$('#htmlarea_create').on('click', function() {
-			//改为直接赋值var form = $('#editor_html_area').clone();
-			var htmlArea = {
-				htmlAreaId : 0,
-				name : '',
-				title : '',
-				mappingUrl : '',
-				category : '',
-				description : '',
-				secondLevelType : '',
-				thirdLevelType : '',
-				createToDate : '',
-				createFromDate : '',
-				programFilterEnable : ''
-			};
-			var title = 'Create HtmlArea';
-			renderHtmlAreaModal(title,htmlArea);
 
-		});
-		
-		/**修改
-		*/
-		$(document).on('click', '.htmlarea_edit', function() {
-        	var $tr = $(this).closest('tr');
-        	var itemId = $tr.data('id');
-        	var htmlArea = HtmlAreaService.findHtmlAreaByItem(itemId);
-
-			console.warn(htmlArea);
-			renderHtmlAreaModal("Editor HtmlArea",htmlArea);
-			getEditorFormValue();
-			return;
-        	/*//editRowspan(itemId);//编辑一下rowspan属性
-            //$('#htmlArea_modal').modal('show');
-			HtmlAreaView.deleteHtmlAreaRow(itemId);
-            HtmlAreaView.insertHtmlAreaRow(htmlArea.obj);
-			$(".actionbtn").toggleClass("l-btn-disabled");
-
-            return false;*/
-        });
-		
-		// 根据关键字查询产品
-		$('#htmlArea_search_form').on('submit', function() {
-			var keyword = $('#keyword').val().trim();
-			HtmlAreaService.findHtmlAreasByName(keyword);
-			return false;
-		});
-		
-		// 点击 Delete 按钮，删除产品
-		$(document).on('click','#htmlArea_remove',function() {
-			var chkValues =[];
-			$('input[name="htmlAreaId"]:checked').each(function(){
-				var item = {htmlAreaId:$(this).val()}
-				chkValues.push(item);
-			});
-			if(chkValues.length<1){
-				//
-				return;
-			}
-			if (confirm('Do you want to delete this htmlArea?')) {
-				HtmlAreaService.deleteHtmlAreaRows(chkValues);
-			}
-			return false;
-		});
-
-		// 点击对话框中的 Save 按钮，创建或更新产品
-		$('#htmlarea_modal_submit').on('click', function() {
-			var idNode = $('#htmlAreaId');
-			var id = $(idNode).val();
-			
-			var htmlArea = getEditorFormValue();
-			$(".actionbtn").toggleClass("l-btn-disabled");
-			console.warn('htmlArea',htmlArea);
-			HtmlAreaService.batchUpdateHtmlArea(htmlArea);
-			/*if (id == 0) {
-				HtmlAreaService.batchInsertHtmlArea([htmlArea]);
-			} else {
-				HtmlAreaService.batchUpdateHtmlArea(htmlArea);
-			}*/
-			$("tr.template").detach();
-
-		});
-		//
-	});
-</script>
-
-<style type="text/css">
-.content_ov{height:18px;width:68px;line-height:18px;overflow:hidden;display:block;}
-.content_view_icon{width:20px;height:2px;line-height:16px; padding:0px 10px;margin:2px auto;
-cursor:pointer;
-background:#FEF url(/resources/icon/info.png) center no-repeat !important;}
-
-.editCur{background:#DDD;color:#FFF;}
-.h_grid_tr td{line-height: 100%;vertical-align:middle;/*设置垂直居中*/}
-
-.row-table {
-	background: #666;
-}
-
-.row-table tr th {
-	background: #F1F2F8;
-	height: 36px;
-	color: #666;
-	font-weight: bold;
-	text-indent: 6px;
-}
-
-.row-table tbody tr td {
-	background: #FFF;
-	text-indent: 6px;
-	vertical-align:middle;/*设置垂直居中*/
-}
-
-.required {
-	color: #F00;
-}
-
-.row-table table, .row-table td {
-	margin: 0;
-	padding: 0;
-	vertical-align: middle;
-	text-align: left;
-	vertical-align:middle;/*设置垂直居中*/
-}
-
-.row-table tbody {
-	border-top: 1px solid #DDD;
-	border-left: 1px solid #DDD;
-	border-right: 1px solid #DDD;
-}
-
-.row-table tbody td {
-	background-color: #DFC;
-	border-bottom: 1px solid #DDD;
-	border-right: 1px solid #DDD;
-	padding: 9px;
-	vertical-align:middle;/*设置垂直居中*/
-}
-
-.row-table td {
-	font-weight: bold;
-	padding: 4px 8px 6px 9px;
-	text-align: center;
-	vertical-align:middle;/*设置垂直居中*/
-}
-
-.row-table thead th {
-	font-size: 14px;
-	font-weight: bold;
-	line-height: 19px;
-	padding: 0 8px 2px;
-	text-align: center;
-}
-
-.tabs-title {
-	width: 138px;
-}
-.row-table tfoot{
-	background-color: #DDD;
-	border-bottom: 1px solid #DDD;
-	border-right: 1px solid #DDD;
-	padding: 9px;
-	vertical-align:middle;/*设置垂直居中*/
-}
-.row-table tfoot td {
-	background-color: #DDD;
-	border: 1px d #DDD;
-	padding: 9px;
-	vertical-align:middle;/*设置垂直居中*/
-}
-
-.row-table tfoot span{
-	width:3em;height:1em;padding:3px;background:#FFF;
-}
-
-.modal.in .modal-dialog {
-    width: 728px;
-}
-
-</style>
