--- a/icustom.international/icustom.international.impl/src/main/resources/web/international/index.html
+++ b/icustom.international/icustom.international.impl/src/main/resources/web/international/index.html
@@ -49,14 +49,14 @@
 					<label for="startdate" style="width: 108px; text-align: right;">创建时间:</label>
 					<input type="text" style="width: 38%;" class="easyui-datebox form-control"
 						id="startdate" name="startdate"
-						data-options="prompt:'请选择开始日期',editable:false,required:'true',onSelect:onSelect">
+						data-options="prompt:'请选择开始日期',formatter:myformatter2,parser:myparser,editable:false,required:'true',onSelect:onSelect">
 					<span style="width: 58px; text-align: center;margin:0 28px;">&nbsp; <i
 						class="fa fa-chevron-right" aria-hidden="true"></i> <span
 						class="sr-only">TO</span>
 					</span> 
 						<input type="text" style="width: 38%;margin-left:58px;" class="easyui-datebox form-control"
 						id="enddate" name="enddate"
-						data-options="prompt:'请选择结束日期',editable:false,required:'true',validType:'equaldDate[\'#startdate\']'">
+						data-options="prompt:'请选择结束日期',formatter:myformatter2,parser:myparser,editable:false,required:'true',validType:'equaldDate[\'#startdate\']'">
 				</div>
 
 				<div
